# dsproject

./: .gitignore  README.md  manage.py  pyproject.toml
hinagata/: README.md
hinagata/src/: data.py  modeler.py
hinagata/src/hooks/: create_features.py
hinagata/table/: README.md  cleanup.sh  command.py  reset.sh
hinagata/table/scripts/: analyze.py  cleans.py  custom.py  modeling.py
table/: README.md  command.py  run.sh
table/scripts/: analysis.py  analyze.py  cleans.py  feats.py  loads.py  util.py
toolbox/: automl.py  bokehplotlib.py  feature_selection.py  fileio.py  invopt.py  transform.py  tuner.py  xai.py
